# comgen

./: .gitmodules  Chars.vala  README.md  main.vala  makefile  meson.build
data/: com.github.jeremyvaartjes.comgen.appdata.xml.in  com.github.jeremyvaartjes.comgen.desktop.in  com.github.jeremyvaartjes.comgen.gschema.xml  meson.build
debian/: changelog  control  copyright
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.jeremyvaartjes.comgen.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+158 more)
po/extra/: POTFILES  README.md  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+159 more)
src/: Application.vala  Chars.vala  Generate.vala  MainWindow.vala  Settings.vala  main.vala
